--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </div>
     </nav>
     <nav id="hamburger-nav">
-      <div class="logo">Vinay Reddy</div>
+      <div class="logo">K.Vinay Reddy</div>
       <div class="hamburger-menu">
         <div class="hamburger-icon" onclick="toggleMenu()">
           <span></span>
